#208: Fix character state elements disappearing off-screen on small screens

--- a/ui/src/main/web/styles/editor/editor.module.css
+++ b/ui/src/main/web/styles/editor/editor.module.css
@@ -23,7 +23,7 @@
 .sections {
   grid-row: 2;
   grid-column: 1 / 3;
-  overflow: hidden;
+  overflow-y: hidden;
 
   display: flex;
 }
