--- a/ui/src/main/web/styles/player/view/characterTab.module.css
+++ b/ui/src/main/web/styles/player/view/characterTab.module.css
@@ -3,7 +3,6 @@
   grid-template-rows: min-content 1fr;
   grid-row-gap: 1rem;
   justify-items: center;
-  justify-content: space-evenly;
 }
 
 .equipmentPanel {
